# icl_adaptation

./: .gitignore  =0.12  COMMANDS.sh  README.md  SETUP.md  pyproject.toml
configs/: config.yaml
configs/data/: ant_dir.yaml  base.yaml  halfcheetah.yaml  halfcheetah_full_context.yaml  icrt_mt.yaml  icrt_mt_full_trajectory.yaml  libero_cosmos.yaml  maniskill_pickcube.yaml  vd4rl.yaml  vd4rl_walker_random.yaml
configs/experiment/: base.yaml
configs/model/: transformer.yaml  vd4rl_dt.yaml  vla_dt.yaml
configs/optim/: adamw.yaml
configs/paths/: default.yaml
configs/system/: single_gpu.yaml
datasets/ICRT-MT/: .gitattributes  README.md
docs/: D4RL_TRAINING.md  ICRT_MT_TRAINING.md  LIBERO_COSMOS_TRAINING.md  MANISKILL.md  MANISKILL_PPO_WANDB_REPRO.md  VD4RL_TRAINING.md
scripts/: build_libero_sample_index.py  compute_dense_rewards.py  convert_libero_hdf5_to_dataset.py  convert_roboarena_to_dataset.py  download_d4rl_halfcheetah.py  download_icrt_dataset.py  download_libero_cosmos.py  eval_only.sh  export.sh  plot_d4rl_return_histogram.py  precompute_libero_embeddings.py  resume.sh  run_d4rl_policy_eval.py  run_halfcheetah.sh  run_libero_eval.py  run_libero_pipeline.sh  run_roboarena_pipeline.sh  score_trajectories_robometer.py  train.sh  visualize_icrt_data.py  viz_relabeled_returns.py
scripts/maniskill/: carc_ppo_wandb_repro_single_env.sbatch  fetch_ppo_wandb_configs.py  maniskill_merge_trajectories.py  maniskill_trajectory_stats.py  ppo_single_env.sbatch  ppo_train_icldata.py  ppo_wandb_repro_single_env.sbatch  requirements.txt  requirements_icl_train.txt  run_ppo_wandb_repro.py  run_ppo_wandb_repro.sh  submit_ppo_wandb_repro_carc.sh  submit_ppo_wandb_repro_slurm.sh  test_maniskill.py  train_ppo_many_envs.sh  trajectory_returns_history.py
scripts/maniskill/ppo_wandb_repro/: default_tabletop_repro_envs.txt
src/: __init__.py  eval.py  train.py
src/config/: __init__.py  schema.py
src/data/: __init__.py  algorithm_distillation_dataset.py  d4rl_loader.py  dataset.py  ic_replay_buffer_dataset.py  ic_replay_buffer_hdf5.py  icrt_dataset.py  libero_dataset.py  maniskill_io.py  maniskill_loader.py  maniskill_state_filter.py  reward_normalization.py  rtg.py  sample_index.py  trajectories.py  vd4rl_loader.py
src/engine/: __init__.py  checkpointing.py  eval_action_compare.py  eval_context.py  eval_visuals.py  eval_viz.py  logging.py  reward_models.py  run_dir.py  trainer.py  training_debug_viz.py
src/envs/: __init__.py  d4rl_normalized_score.py  eval_gym.py  libero_env.py  maniskill_eval_env.py  maniskill_pickcube_placed_only.py  minari_halfcheetah_eval.py  vd4rl_eval_env.py
src/models/: __init__.py  backbones.py  context.py  icrt_dt.py  meta_dt.py  types.py  vision.py  vision_encoders.py  vla_dt.py
src/reward_relabeling/: __init__.py  reward_model.py
src/utils/: __init__.py  eval_utils.py  npz_io.py  video.py
