[project]
name = "icl_adaptation"
version = "0.1.0"
description = "In-context learning for robot trajectories (context sorted by returns; zero-shot adaptation with previous rollouts sorted ascending)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "tensorboard>=2.13",
    "wandb>=0.15.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "tqdm",
    "gym>=0.17",
    "transformers>=4.20.0",
    "ipdb",
]

[project.optional-dependencies]
# Minari: offline RL datasets (Gymnasium + MuJoCo 2, no mujoco_py / no Cython).
d4rl = ["minari[all]"]
# ICRT-style: robot manipulation with language + multi-view images (HuggingFace + HDF5 + viz).
icrt = ["huggingface_hub>=0.20.0", "h5py>=3.8.0", "matplotlib>=3.5.0", "datasets>=2.0.0"]
# LIBERO: deps for sim env. Pin robosuite 1.4.x for LIBERO compatibility. Clone LIBERO inside this repo, then: uv sync --extra libero
libero = [
    "robosuite>=1.4.0,<1.5",
    "bddl>=1.0.1",
    "easydict>=1.9",
    "h5py>=3.8.0",
    "matplotlib>=3.5.0",
]
# DINOv2, SigLIP/PaliGemma, ViT (CrossMAE-style) use transformers. LLaMA 2 needs HuggingFace token for gated models.
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
