[project]
name = "icl_adaptation"
version = "0.1.0"
description = "In-context learning for robot trajectories (context sorted by returns; zero-shot adaptation with previous rollouts sorted ascending)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "tensorboard>=2.13",
    "wandb[media]>=0.15.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "tqdm",
    "gym>=0.17",
    "transformers>=4.20.0",
    "ipdb",
    "imageio[ffmpeg]>=2.9.0",
    "opencv-python-headless>=4.5.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.5.0",
    "datasets>=4.5.0",
    "einops",
    "h5py>=3.8.0",
]

[project.optional-dependencies]
# Minari: offline RL datasets. The `mujoco` package is required for Gymnasium MuJoCo envs
# (e.g. HalfCheetah-v5 eval); minari[all] alone does not always install it.
# dm_control: V-D4RL eval (dm_control Walker-walk / Cheetah-run, same suite as upstream v-d4rl).
d4rl = ["minari[all]", "mujoco>=3.0.0", "dm_control"]
# ICRT-style: robot manipulation with language + multi-view images (HuggingFace + HDF5 + viz).
icrt = ["huggingface_hub>=0.20.0", "h5py>=3.8.0", "datasets>=2.0.0"]
# LIBERO: deps for sim env. Pin robosuite 1.4.x for LIBERO compatibility. Clone LIBERO inside this repo, then: uv sync --extra libero
libero = [
    "robosuite>=1.4.0,<1.5",
    "bddl>=1.0.1",
    "easydict>=1.9",
    "h5py>=3.8.0",
]
# Reward relabeling (compute_dense_rewards.py): Robometer-4B / RoboDopamine-8B. Robometer is not on PyPI; install from GitHub without deps: uv pip install "git+https://github.com/robometer/robometer.git" --no-deps (then uv sync --extra reward-relabel).
reward-relabel = [
    "pandas",
    "uvicorn",
    "fastapi",
    "codetiming",
    "sentence_transformers",
    "accelerate",
    "peft",
    "unsloth",
    "qwen-vl-utils"
]
# ManiSkill: not an optional extra here — mani-skill pins gymnasium==0.29.1, which breaks HalfCheetah-v5.
# Use scripts/maniskill/requirements.txt in a dedicated venv (see docs/MANISKILL.md).
# DINOv2, SigLIP/PaliGemma, ViT (CrossMAE-style) use transformers. LLaMA 2 needs HuggingFace token for gated models.
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# sys.path bootstrap before third-party / src imports
"src/eval.py" = ["E402"]
# Upstream-style PPO (long lines, imports after sys.path)
"scripts/maniskill/ppo_train_icldata.py" = ["E501", "E402", "I001", "E731"]

[tool.ruff.format]
quote-style = "double"
